# mlserve

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: avazu.yaml  nyc_taxi.yaml
deploy/huggingface/: Dockerfile  README-space.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ComparisonPanel.jsx  PredictionForm.jsx  ResultDisplay.jsx
frontend/src/config/: models.generated.json
frontend/src/services/: api.js
load_testing/: avazu_comparison.js  full_stack.js
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mlserve-overview.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
notebooks/: eda_avazu.ipynb  eda_nyctaxi.ipynb
src/mlserve/: __init__.py
src/mlserve/common/: logging.py  paths.py  protocol.py
src/mlserve/config/: schema.py
src/mlserve/data/: loader.py  prepare.py  synthetic.py
src/mlserve/features/: avazu.py  base.py  nyc_taxi.py  registry.py
src/mlserve/serving/: app.py  frontend_config.py  metrics.py  registry.py  runners.py
src/mlserve/training/: export_onnx.py  mlflow_utils.py  register.py  train.py
tests/: test_pipeline.py
