[project]
name = "mlserve"
version = "0.1.0"
description = "Production-grade ML inference platform: XGBoost vs ONNX runtime comparison, V2 inference protocol, FastAPI serving, MLflow tracking, Prometheus metrics."
readme = "README.md"
requires-python = ">=3.11,<3.13"

# Pinned for reproducibility. Compatible release (~=) lets patch updates through
# while locking the minor version. uv.lock captures the exact resolved versions.
dependencies = [
    "numpy~=1.26.0",
    "pandas~=2.2.0",
    "pyarrow~=15.0.0",
    "scikit-learn~=1.4.0",
    "xgboost~=2.0.3",
    "pyyaml~=6.0",
    "mlflow~=2.11.0",
    "onnxmltools~=1.12.0",
    "onnxconverter-common~=1.14.0",
    "onnxruntime~=1.17.0",
    "fastapi~=0.110.0",
    "uvicorn[standard]~=0.29.0",
    "pydantic~=2.6.0",
    "prometheus-client~=0.20.0",
    "httpx~=0.27.0",
    "setuptools>=69,<81",  # provides pkg_resources for mlflow 2.11; removed in setuptools 81+
]

[project.optional-dependencies]
# Kaggle CLI is only needed if you want the real datasets. Keep it out of the
# default install so `uv sync` stays light and the demo path needs no Kaggle account.
kaggle = ["kaggle~=1.6.0"]
dev = ["pytest~=8.1.0", "ruff~=0.3.0"]

# Console scripts: every pipeline stage is runnable as `uv run <cmd>`.
[project.scripts]
mlserve-prepare  = "mlserve.data.prepare:main"
mlserve-train    = "mlserve.training.train:main"
mlserve-export   = "mlserve.training.export_onnx:main"
mlserve-register = "mlserve.training.register:main"
mlserve-frontend-config = "mlserve.serving.frontend_config:main"
mlserve-serve    = "mlserve.serving.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlserve"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
